Revision history for File::DataClass

0.65.1    2015-08-12 23:36:59
          - Broken smoker 72b36e62-3f5b-11e5-9808-9febf015f39b

0.64.1    2015-08-09 20:28:41
          - Fix tests on cygwin
          - Stop using feature state
          - Replaced 01always_pass.t with 00report_metadata.t

0.63.1    2015-06-21 22:41:24
          - Skip tests if Test::Deep 0.116 installed
          - Added F:DC:IO:clone
          - Protect against undefined values in IO constructor array refs

0.62.1    2015-05-24 12:50:58
          - Stopped IO substitute useless perms call
          - IO no longer uses Exporter to export io constructor function
          - IO::_proxy function now use Sub::Install
          - Added global destruction flag to DEMOLISH subs

0.61.1    2015-05-11 13:12:04
          - Improved test coverage
          - Allow a file name of 0 in IO
          - Default reboolify false. Issue using boolean with Type::Tiny
          - Use boolean to reboolify JSON data when reading. mst++
          - Added IO::sibling and IO::visit
          - Added IO::child
          - Removed HashMerge. Renamed merge to merge_for_update
          - Storage drops locks on destruction
          - Removed Schema::extensions
          - POD updates

0.60.1    2015-04-09 00:09:00
          - Added strict warnings to main module. Kwalitee
          - Better Octalum implementation

0.59.1    2015-04-05 18:56:50
          - Fixed bad format test

0.58.1    2015-04-04 21:14:40
          - Removed VERSION from Schema due to indexing problems

0.57.1    2015-04-04 20:59:17
          - Added Kwakitee badge
          - Refactored cache of cache objects
          - Fixed bug in ::IO::exists
          - Added IO::Handle proxy methods to ::IO
          - Improved test coverage
          - Overload stringify in ::IO uses handle if no name

0.56.1    2015-03-19 14:57:54
          - Deleted _lock_obj from ::IO. Unusable misfeature
          - Fixed IO::seek
          - Added IO::tell