@@ -18,13 +18,17 @@ Sub::Install      = 0.928
 Subclass::Of      = 0.003
 Try::Tiny         = 0.22
 Type::Tiny        = 1.000002
-Unexpected        = v0.38.0
+Unexpected        = v0.39.0
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
 Module::Build     = 0.4004
 
 [Prereqs / BuildRequires]
+version           = 0.88
+Module::Build     = 0.4004
+
+[Prereqs / TestRequires]
 version           = 0.88
 File::pushd       = 1.00
 Module::Build     = 0.4004
