@@ -1,5 +1,7 @@
 Revision history for File::DataClass
 
+          - Broken smoker 7d05f746-6cb1-1014-afba-1d3088877a71
+
 0.65.1    2015-08-12 23:36:59
           - Broken smoker 72b36e62-3f5b-11e5-9808-9febf015f39b
 
